fix nav bar and give slider controls wrapping functionality

--- a/css/slideshow.css
+++ b/css/slideshow.css
@@ -2,15 +2,11 @@
   text-align: center;
 }
 
-#image {
+#slide {
 	margin-top: 30px;
 	width: 100%;
 }
 
-#container {
-  width: 75%;
-  text-align: center;
-}
 
 button {
    border-top: 1px solid #0a1821;
